Change recipe name and add picture
Before was using Italian Sausage Orzo as recipe
but changed to Beef Stroganoff to make use of free
picture from creative commons.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/italian-sausage-orzo.html">
-            Italian Sausage Orzo</a>
+        <a href="./recipes/beef-stroganoff.html">Beef Stroganoff</a>
     </body>
 </html>
