Add description, ingredients, and steps to recipe.
Finish iteration 3 by adding these elements to the Beef Stroganoff
recipe.

--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -7,6 +7,48 @@
     <body>
         <h1>Beef Stroganoff</h1>
         <a href="../index.html">Home</a><br/>
-        <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="350">
+        <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="325">
+        <h2>Description</h2>
+        <p>One-Pot Creamy Stroganoff dish ready in 30 minutes.</p>
+        <p>Easy to make and can substitute beef for chicken, turkey, or mushrooms.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Butter</li>
+            <li>Oil</li>
+            <li>Ground beef (or can substitute for chicken or turkey).</li>
+            <li>Onion</li>
+            <li>Garlic</li>
+            <li>Mushrooms</li>
+            <li>Mustard</li>
+            <li>Worcestershire sauce</li>
+            <li>Beef stock cube</li>
+            <li>Egg noodles</li>
+            <li>Sour cream</li>
+            <li>Salt, black pepper</li>
+            <li>Water</li>
+            <li>Mustard</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Heat the butter and oil in a Dutch oven. Add the ground meat, 
+                break it up, and allow it to brown as best as possible.</li>
+            <li>Meanwhile, dice the onions and add them to the pot along with 
+                the salt, pepper, and garlic.</li>
+            <li>Slice the mushrooms and add them to the pot. Allow the mushrooms, 
+                onions, and meat to cook for 4-5 minutes or until the onions and 
+                mushrooms soften.</li>
+            <li>Crumble in the stock cube, add the mustard, Worcestershire sauce, 
+                and boiling water, and stir well to combine.</li>
+            <li>Add the noodles and stir everything together. Crank up the heat 
+                to max until the water comes to a boil, then reduce the heat to 
+                medium-low, cover with a lid, and allow to cook, stirring 
+                occasionally, according to the package instructions on the pasta.</li>
+            <li>Once the pasta is done, the mixture should still be quite watery, 
+                but the pasta will have absorbed a lot of the liquid. Remove the 
+                pot from the heat, stir in the sour cream, and allow the pasta to 
+                sit, covered, for 5 minutes.</li>
+            <li>Meanwhile, chop the herbs (parsley or dill). After the stroganoff 
+                has rested for 5 minutes, stir in the fresh herbs and serve.</li>
+        </ol>
     </body>
 </html>
