Create second recipe fish tacos
Finished second of three recipes.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/beef-stroganoff.html">Beef Stroganoff</a>
+        <a href="./recipes/fish-tacos.html">Fish Tacos</a>
     </body>
 </html>
