Create 3rd/last recipe & add list for index links
This commit creates the last recipe file, Chicken Burrito Bowls.
It also puts the links on the index page into a list, rather than
listed next to each other.

--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -5,8 +5,8 @@
         <title>Beef Stroganoff</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Beef Stroganoff</h1>
-        <a href="../index.html">Home</a><br/>
         <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400">
         <h2>Description</h2>
         <p>One-Pot Creamy Stroganoff dish ready in 30 minutes.</p>
