Organize links on home page into a list.
Last commit was from the recipes directory so accidentally didn't
include changes to index file. This commit resolves that.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/beef-stroganoff.html">Beef Stroganoff</a>
-        <a href="./recipes/fish-tacos.html">Fish Tacos</a>
+        <ul>
+            <li><a href="./recipes/beef-stroganoff.html">Beef Stroganoff</a></li>
+            <li><a href="./recipes/fish-tacos.html">Fish Tacos</a></li>
+            <li><a href="./recipes/chicken-burrito-bowls.html">Chicken Burrito Bowls</a></li>
+        </ul>
+        
     </body>
 </html>
