--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="styles/style.css">
         <meta charset="utf-8">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/beef-stroganoff.html">Beef Stroganoff</a></li>
-            <li><a href="./recipes/fish-tacos.html">Fish Tacos</a></li>
-            <li><a href="./recipes/chicken-burrito-bowls.html">Chicken Burrito Bowls</a></li>
-        </ul>
-        
+        <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
+        <div class="link-container">
+        <a href="./recipes/beef-stroganoff.html" class="recipe one">Beef Stroganoff</a>
+        <a href="./recipes/fish-tacos.html" class="recipe two">Fish Tacos</a>
+        <a href="./recipes/chicken-burrito-bowls.html" class="recipe three">Chicken Burrito Bowls</a></li>
+        </div>        
     </body>
 </html>
