--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../styles/style.css">
         <meta charset="utf-8">
         <title>Beef Stroganoff</title>
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <h1 class="main-header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Beef Stroganoff</h1>
         <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400">
         <h2>Description</h2>
