--- a/recipes/chicken-burrito-bowls.html
+++ b/recipes/chicken-burrito-bowls.html
@@ -5,7 +5,7 @@
         <title>Chicken Burrito Bowls</title>
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Chicken Burrito Bowls</h1>
         <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
         rel="noreferrer" alt="Burrito Bowl" width="400">
