--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -5,7 +5,7 @@
         <title>Fish Tacos</title>
     </head>
     <body>
-        <a href="../index.html">Home</a><br/>
+        <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Fish Tacos</h1>
         <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
         rel="noreferrer" alt="Three Fish Tacos" width="400">
