Add transparent effect on hover
Removed link texts and added effect to the images

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <body>
         <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
         <div class="link-container">
-        <a href="./recipes/beef-stroganoff.html" class="recipe one">Beef Stroganoff</a>
-        <a href="./recipes/fish-tacos.html" class="recipe two">Fish Tacos</a>
-        <a href="./recipes/chicken-burrito-bowls.html" class="recipe three">Chicken Burrito Bowls</a></li>
-        </div>        
+            <a href="./recipes/beef-stroganoff.html" class="recipe one">
+
+            </a>
+            <a href="./recipes/fish-tacos.html" class="recipe two">
+
+            </a>
+            <a href="./recipes/chicken-burrito-bowls.html" class="recipe three"></span>
+            
+            </a>
+        </div>   
     </body>
 </html>
