Change element to img from  a, remove redundancy
Got rid of link text and added back in img element. Centered images on
recipe pages. Removed redundant code and styling.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     </head>
     <body>
         <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
-        <div class="link-container">
-            <a href="./recipes/beef-stroganoff.html" class="recipe one">
-
-            </a>
-            <a href="./recipes/fish-tacos.html" class="recipe two">
-
-            </a>
-            <a href="./recipes/chicken-burrito-bowls.html" class="recipe three"></span>
-            
-            </a>
+        <div class="img-container">
+            <a href="./recipes/beef-stroganoff.html">
+                <img src="./images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400" height="300" class="recipe"></a>
+            <a href="./recipes/fish-tacos.html">
+                <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
+                 rel="noreferrer" alt="Three Fish Tacos" width="400" height="300" class="recipe"></a>
+            <a href="./recipes/chicken-burrito-bowls.html">
+                <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
+                rel="noreferrer" alt="Burrito Bowl" width="400" class="recipe"></a>
         </div>   
     </body>
 </html>
