--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -8,7 +8,9 @@
     <body>
         <h1 class="main-header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Beef Stroganoff</h1>
-        <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400">
+        <div class="img-container">
+            <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400">
+        </div>
         <h2>Description</h2>
         <p>One-Pot Creamy Stroganoff dish ready in 30 minutes.</p>
         <p>Easy to make and can substitute beef for chicken, turkey, or mushrooms.</p>
