--- a/recipes/chicken-burrito-bowls.html
+++ b/recipes/chicken-burrito-bowls.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../styles/style.css">
         <meta charset="utf-8">
         <title>Chicken Burrito Bowls</title>
     </head>
     <body>
-        <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
+        <h1 class="main-header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Chicken Burrito Bowls</h1>
-        <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
-        rel="noreferrer" alt="Burrito Bowl" width="400">
+        <div class="container">
+            <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
+              rel="noreferrer" alt="Burrito Bowl" width="400">
+        </div>
         <h2>Description</h2>
         <p>These hearty burrito bowls are packed with protein and fiber, making 
             them the perfect meal prep option for busy weekdays.</p>
