--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../styles/style.css">
         <meta charset="UTF-8">
         <title>Fish Tacos</title>
     </head>
     <body>
-        <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
+        <h1 class="main-header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Fish Tacos</h1>
-        <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
-        rel="noreferrer" alt="Three Fish Tacos" width="400">
+        <div class="container">
+          <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
+            rel="noreferrer" alt="Three Fish Tacos" width="400">
+        </div>
         <h2>Description</h2>
         <p>Delicious Fish Taco recipe for up to 24 tacos.</p>
         <p>The recipe calls for tilapia but you are welcome to use any white 
