Fix margin under header for recipe pages
Want a gap for fist page but not on the recipe pages.

--- a/recipes/chicken-burrito-bowls.html
+++ b/recipes/chicken-burrito-bowls.html
@@ -6,7 +6,7 @@
         <title>Chicken Burrito Bowls</title>
     </head>
     <body>
-        <h1 class="main-header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
+        <h1 class="header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Chicken Burrito Bowls</h1>
         <div class="img-container">
             <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
