--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -6,7 +6,7 @@
         <title>Fish Tacos</title>
     </head>
     <body>
-        <h1 class="main-header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
+        <h1 class="header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Fish Tacos</h1>
         <div class="img-container">
           <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
