--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1 class="main-header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
+        <h1 class="main header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
         <div class="img-container">
             <a href="./recipes/beef-stroganoff.html">
                 <img src="./images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400" height="300" class="recipe"></a>
