--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -6,7 +6,7 @@
         <title>Beef Stroganoff</title>
     </head>
     <body>
-        <h1 class="main-header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
+        <h1 class="header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Beef Stroganoff</h1>
         <div class="img-container">
             <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400">
