Add captions with link below images on home

--- a/recipes/chicken-burrito-bowls.html
+++ b/recipes/chicken-burrito-bowls.html
@@ -8,7 +8,7 @@
     <body>
         <h1 class="header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Chicken Burrito Bowls</h1>
-        <div class="img-container">
+        <div class="container">
             <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
               rel="noreferrer" alt="Burrito Bowl" width="400">
         </div>
