--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     </head>
     <body>
         <h1 class="main header"> <a href="./index.html" class="home-link"> Odin Recipes </a> </h1>
-        <div class="img-container">
-            <a href="./recipes/beef-stroganoff.html">
-                <img src="./images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400" height="300" class="recipe"></a>
-            <a href="./recipes/fish-tacos.html">
-                <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
-                 rel="noreferrer" alt="Three Fish Tacos" width="400" height="300" class="recipe"></a>
-            <a href="./recipes/chicken-burrito-bowls.html">
-                <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
-                rel="noreferrer" alt="Burrito Bowl" width="400" class="recipe"></a>
-        </div>   
+        <div class="center">
+            <div class="container one">
+                <a href="./recipes/beef-stroganoff.html">
+                    <img src="./images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' 
+                    width="400" height="300" class="recipe"></a> 
+                    <p><a href="./recipes/beef-stroganoff.html" class="caption">Beef Stroganoff</a><p>
+            </div>
+            <div class="container one">
+                <a href="./recipes/fish-tacos.html">
+                    <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
+                    rel="noreferrer" alt="Three Fish Tacos" width="400" height="300" class="recipe"></a>
+                    <p><a href="./recipes/fish-tacos.html" class="caption">Fish Tacos</a></p>
+            </div>
+            <div class="container one"> 
+                <a href="./recipes/chicken-burrito-bowls.html">
+                    <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
+                    rel="noreferrer" alt="Burrito Bowl" width="400" class="recipe"></a>
+                    <p><a href="./recipes/chicken-burrito-bowls.html" class="caption">Chicken Burrito Bowls</a></p>
+            </div>
     </body>
 </html>
