--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -8,7 +8,7 @@
     <body>
         <h1 class="header"> <a href="../index.html" class="home-link"> Odin Recipes </a> </h1>
         <h1>Beef Stroganoff</h1>
-        <div class="img-container">
+        <div class="container">
             <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400">
         </div>
         <h2>Description</h2>
