Format recipe pages
Added div class to center and style text on recipe pages.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             <div class="container one">
                 <a href="./recipes/beef-stroganoff.html">
                     <img src="./images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' 
-                    width="400" height="300" class="recipe"></a> 
+                    width="400" height="300" class="home-image"></a> 
                     <p><a href="./recipes/beef-stroganoff.html" class="caption">Beef Stroganoff</a><p>
             </div>
             <div class="container one">
                 <a href="./recipes/fish-tacos.html">
                     <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
-                    rel="noreferrer" alt="Three Fish Tacos" width="400" height="300" class="recipe"></a>
+                    rel="noreferrer" alt="Three Fish Tacos" width="400" height="300" class="home-image"></a>
                     <p><a href="./recipes/fish-tacos.html" class="caption">Fish Tacos</a></p>
             </div>
             <div class="container one"> 
                 <a href="./recipes/chicken-burrito-bowls.html">
                     <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
-                    rel="noreferrer" alt="Burrito Bowl" width="400" class="recipe"></a>
+                    rel="noreferrer" alt="Burrito Bowl" width="400" class="home-image"></a>
                     <p><a href="./recipes/chicken-burrito-bowls.html" class="caption">Chicken Burrito Bowls</a></p>
             </div>
     </body>
