--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -11,9 +11,10 @@
         <div class="container">
             <img src="../images/stroganoff.jpeg" alt ='Creamy Beef Stroganoff' width="400">
         </div>
-        <h2>Description</h2>
-        <p>One-Pot Creamy Stroganoff dish ready in 30 minutes.</p>
-        <p>Easy to make and can substitute beef for chicken, turkey, or mushrooms.</p>
+        <div class="recipe">
+            <h2>Description</h2>
+            <p>One-Pot Creamy Stroganoff dish ready in 30 minutes.</p>
+            <p>Easy to make and can substitute beef for chicken, turkey, or mushrooms.</p>
         <h2>Ingredients</h2>
         <ul>
             <li>Butter</li>
@@ -53,5 +54,6 @@
             <li>Meanwhile, chop the herbs (parsley or dill). After the stroganoff 
                 has rested for 5 minutes, stir in the fresh herbs and serve.</li>
         </ol>
+        </div>
     </body>
 </html>
