--- a/recipes/chicken-burrito-bowls.html
+++ b/recipes/chicken-burrito-bowls.html
@@ -12,6 +12,7 @@
             <img src="https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg" 
               rel="noreferrer" alt="Burrito Bowl" width="400">
         </div>
+        <div class="recipe">
         <h2>Description</h2>
         <p>These hearty burrito bowls are packed with protein and fiber, making 
             them the perfect meal prep option for busy weekdays.</p>
@@ -43,5 +44,6 @@
             <li>Divide the mixture equally into 4-6 bowls and sprinkle over 
                 some thinly sliced green onions.</li>
         </ol>
+        </div>
     </body>
 </html>
