--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -12,6 +12,7 @@
           <img src="https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg" 
             rel="noreferrer" alt="Three Fish Tacos" width="400">
         </div>
+        <div class="recipe">
         <h2>Description</h2>
         <p>Delicious Fish Taco recipe for up to 24 tacos.</p>
         <p>The recipe calls for tilapia but you are welcome to use any white 
@@ -59,5 +60,6 @@
                 and finally that awesome taco sauce! Serve with a fresh lime 
                 wedge to squeeze over tacos.</li>
         </ol>
+        </div>
     </body>
 </html>
